--- a/package.json
+++ b/package.json
@@ -3,8 +3,22 @@
   "version": "1.0.0",
   "description": "Authease is a comprehensive authentication solution seamlessly integrating backend and frontend for effortless user management.",
   "main": "app.js",
+  "type": "module",
+  "imports": {
+    "#app": "./app.js",
+    "#routes/*": "./routes/*.js",
+    "#models/*": "./models/*.js",
+    "#controllers/*": "./controllers/*.js",
+    "#services/*": "./services/*.js",
+    "#utilities/*": "./utilities/*.js",
+    "#middleware/*": "./middleware/*.js",
+    "#config/*": "./config/*.js",
+    "#constants": "./constants.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +29,15 @@
   "bugs": {
     "url": "https://github.com/yashodharpatel/authease/issues"
   },
-  "homepage": "https://github.com/yashodharpatel/authease#readme"
+  "homepage": "https://github.com/yashodharpatel/authease#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0"
+  }
 }
